--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <div class="black-rook" id="h8"></div>
             </div>
         </main>
-        <script src="chess.js"></script>
+        <script src="scripts/chess.js"></script>
+        <script src="scripts/cria_tabuleiro.js"></script>
     </body>
 </html>
