index com menu :)

--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
                 <div class="black-knight" id="g8"><img src="img/black_knight.svg"></div>
                 <div class="black-rook" id="h8"><img src="img/black_rook.svg"></div>
             </div>
+            <div id="menu">
+                <div class="opcoes">
+                    <p>Login</p>
+                </div>
+                <div class="opcoes">
+                    <p>Configurações</p>
+                </div>
+                <div class="opcoes">
+                    <p>Contribuidores</p>
+                </div>
+            </div>
         </main>
         <script src="scripts/chess.js"></script>
         <script src="scripts/cria_tabuleiro.js"></script>
