comecei a janela de configurações e mudei o simbolo do menu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
             <img src="">
             <p>Press <mark>SPACE</mark> to continue</p>
         </div>
+        <!--janela das configurações incompleta-->
+        <div id="pop-up-configuracoes">
+            <div id="configuracoes">
+            </div>
+        </div>
+        <!--------------------------------------->
         <header>
             <h1>Chess</h1>
             <div class="container">
                 <input type="checkbox" id="checkbox-menu">
             
                 <label for="checkbox-menu">
-                  <span></span>
                   <span></span>
                   <span></span>
                 </label>
