--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
             <canvas id="board" width="2400" height="2400"></canvas>
             
             <section id="pieces-move">
-                <div class="white-rook" id="a1"><img src="img/white_rook.svg"></div>
-                <div class="white-knight" id="b1"><img src="img/white_knight.svg"></div>
-                <div class="white-bishop" id="c1"><img src="img/white_bishop.svg"></div>
-                <div class="white-queen" id="d1"><img src="img/white_queen.svg"></div>
-                <div class="white-king" id="e1"><img src="img/white_king.svg"></div>
-                <div class="white-bishop" id="f1"><img src="img/white_bishop.svg"></div>
-                <div class="white-knight" id="g1"><img src="img/white_knight.svg"></div>
-                <div class="white-rook" id="h1"><img src="img/white_rook.svg"></div>
+                <div class="white-rook" id="a1"><img class="piece" src="img/white_rook.svg"></div>
+                <div class="white-knight" id="b1"><img class="piece" src="img/white_knight.svg"></div>
+                <div class="white-bishop" id="c1"><img class="piece" src="img/white_bishop.svg"></div>
+                <div class="white-queen" id="d1"><img class="piece" src="img/white_queen.svg"></div>
+                <div class="white-king" id="e1"><img class="piece" src="img/white_king.svg"></div>
+                <div class="white-bishop" id="f1"><img class="piece" src="img/white_bishop.svg"></div>
+                <div class="white-knight" id="g1"><img class="piece" src="img/white_knight.svg"></div>
+                <div class="white-rook" id="h1"><img class="piece" src="img/white_rook.svg"></div>
 
-                <div class="white-pawn" id="a2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="b2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="c2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="d2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="e2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="f2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="g2"><img src="img/white_pawn.svg"></div>
-                <div class="white-pawn" id="h2"><img src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="a2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="b2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="c2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="d2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="e2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="f2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="g2"><img class="piece" src="img/white_pawn.svg"></div>
+                <div class="white-pawn" id="h2"><img class="piece" src="img/white_pawn.svg"></div>
 
                 <div id="a3"></div>
                 <div id="b3"></div>
@@ -100,23 +100,23 @@
                 <div id="g6"></div>
                 <div id="h6"></div>
 
-                <div class="black-pawn" id="a7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="b7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="c7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="d7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="e7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="f7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="g7"><img src="img/black_pawn.svg"></div>
-                <div class="black-pawn" id="h7"><img src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="a7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="b7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="c7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="d7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="e7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="f7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="g7"><img class="piece" src="img/black_pawn.svg"></div>
+                <div class="black-pawn" id="h7"><img class="piece" src="img/black_pawn.svg"></div>
 
-                <div class="black-rook" id="a8"><img src="img/black_rook.svg"></div>
-                <div class="black-knight" id="b8"><img src="img/black_knight.svg"></div>
-                <div class="black-bishop" id="c8"><img src="img/black_bishop.svg"></div>
-                <div class="black-queen" id="d8"><img src="img/black_queen.svg"></div>
-                <div class="black-king" id="e8"><img src="img/black_king.svg"></div>
-                <div class="black-bishop" id="f8"><img src="img/black_bishop.svg"></div>
-                <div class="black-knight" id="g8"><img src="img/black_knight.svg"></div>
-                <div class="black-rook" id="h8"><img src="img/black_rook.svg"></div>
+                <div class="black-rook" id="a8"><img class="piece" src="img/black_rook.svg"></div>
+                <div class="black-knight" id="b8"><img class="piece" src="img/black_knight.svg"></div>
+                <div class="black-bishop" id="c8"><img class="piece" src="img/black_bishop.svg"></div>
+                <div class="black-queen" id="d8"><img class="piece" src="img/black_queen.svg"></div>
+                <div class="black-king" id="e8"><img class="piece" src="img/black_king.svg"></div>
+                <div class="black-bishop" id="f8"><img class="piece" src="img/black_bishop.svg"></div>
+                <div class="black-knight" id="g8"><img class="piece" src="img/black_knight.svg"></div>
+                <div class="black-rook" id="h8"><img class="piece" src="img/black_rook.svg"></div>
             </section>
         </main>
         <script src="scripts/chess.js"></script>
