--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
             <label id="senha-nova"> <!-- colocar icone -->
                 <input type="password" placeholder="Defina a Senha" minlength="8" maxlength="25">
             </label>
+            <img src="img/white_rook.svg" id="torre-animacao">
+            <label id="senha-confirmacao"> <!-- colocar icone -->
+                <input type="password" placeholder="Confirme a senha aqui" minlength="8" maxlength="25">
+            </label>
             <button id="botao-confirmar" class="sumir" type="submit">Criar!</button>
         </div>
         <script src="scripts/chess.js"></script>
