tem um bo n cria_tabuleiro.js, função mudaCor

--- a/index.html
+++ b/index.html
@@ -21,21 +21,25 @@
         <div class="pop-up-configuracoes-fechado" id="configuracoes">
             <div id="configuracoes-janela">
                 <div class="temas" id="wood" 
+                    data-tema="wood"
                     data-dark-square="rgb(181, 136, 99)" 
                     data-light-square="rgb(240, 217, 181)">
                     <h2>Wood</h2>
                 </div>
-                <div class="temas" id="blue" 
+                <div class="temas" id="blue"
+                    data-tema="blue" 
                     data-dark-square="rgb(4, 14, 61)" 
                     data-light-square="rgb(211, 218, 240)">
                     <h2>Blue</h2>
                 </div>
-                <div class="temas" id="modern" 
+                <div class="temas" id="modern"
+                    data-tema="modern" 
                     data-dark-square="rgb(24, 24, 24)" 
                     data-light-square="rgb(170, 170, 170)">
                     <h2>Modern</h2>
                 </div>
                 <div class="temas" id="traditional" 
+                    data-tema="traditional"
                     data-dark-square="rgb(115, 180, 89)" 
                     data-light-square="rgb(233, 227, 219)">
                     <h2>Traditional</h2>
