melhorei o login.js

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,7 +44,7 @@
             <article  class="titulos">
                 <h2>Desenvolvedores</h2>
             </article>
-            <article class="conteudo">
+            <article class="conteudo devs">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
                     <h3>Arthur Leão</h3>
@@ -54,7 +54,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </article>
-            <article class="conteudo">
+            <article class="conteudo devs">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
                     <h3>Eduardo Costa</h3>
@@ -64,7 +64,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </article>
-            <article class="conteudo">
+            <article class="conteudo devs">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
                     <h3>Eloy Ribeiro</h3>
