promocao dos peoes

--- a/index.html
+++ b/index.html
@@ -69,6 +69,24 @@
         </nav>
         <!-- fonte das imagens: https://commons.wikimedia.org/wiki/Category:SVG_chess_pieces -->
         <main>
+            <section id="black-promotion">
+                <div>
+                    <img draggable="false" data-piece="queen" src="img/black_queen.svg">
+                    <img draggable="false" data-piece="knight" src="img/black_knight.svg">
+                    <img draggable="false" data-piece="rook" src="img/black_rook.svg">
+                    <img draggable="false" data-piece="bishop" src="img/black_bishop.svg">
+                </div>
+            </section>
+
+            <section id="white-promotion">
+                <div>
+                    <img draggable="false" data-piece="queen" src="img/white_queen.svg">
+                    <img draggable="false" data-piece="knight" src="img/white_knight.svg">
+                    <img draggable="false" data-piece="rook" src="img/white_rook.svg">
+                    <img draggable="false" data-piece="bishop" src="img/white_bishop.svg">
+                </div>
+            </section>
+
             <canvas id="board" width="2400" height="2400"></canvas>
             
             <section id="pieces-move">
