--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Chess</h1>
+        <a href="index.html">Chess</a>
         <div class="container">
             <input type="checkbox" id="checkbox-menu">
         
