--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Raleway:wght@500&display=swap" rel="stylesheet">
     </head>
-    <body onload="drawBoard();">
+    <body>
         <div id="open-page">
             <!--this div is desapearing when ' ' is pressed-->
             <h1>Chess</h1>
