Ajustei alguns tamanhos para mobile. Coloquei para quando clicar fora do div da promoção cancelar a promoção. Comentei algumas funções previamente feitas

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <!--------------------------------------->
         <header>
-            <a href="/">Chess</a>
+            <a href="index.html">Chess</a>
             <div class="container">
                 <input type="checkbox" id="checkbox-menu">
             
