agora pode ir para o proximo input do login com enter

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <h2>Modern</h2>
                 </div>
                 <div class="temas" id="traditional" 
+                    data-tema="traditional"
                     data-dark-square="rgb(29, 93, 51)" 
                     data-light-square="rgb(233, 227, 219)">
                     <h2>Traditional</h2>
