--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Raleway:wght@500&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="img/black_knight.svg">
     </head>
-    <body>
+    <body oncontextmenu="return false;";>
         <div id="open-page">
             <!--this div is desapearing when ' ' is pressed-->
             <h1>Chess</h1>
